# the_cplusplus_program

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: global_macros.cmake
doc/: C 语言中的弱符号引用.md  C 语言长度为零数组简介.md  C++ 类型推导.md  GCC cleanup Attribute.md  GCC 头文件搜索路径.md  右值引用_移动语义_完美转发.md
doc/多线程库/: Locker.md  Threads.md  时间库.md
include/: auto_clean.h
src/: CMakeLists.txt  auto_clean.cpp  chrono_demo.cpp  create_thread.cpp  lock_demo.cpp  main.cpp  threadsafe-queue.cpp  threadsafe-queue.h
src/basic/: addspace.hpp
